# RhizoScan

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/core/: pipeline.py  step.py  step_types.py
src/premade/: effort_pipe.py
src/steps/: data_loader.py  data_preproc.py  data_preproc.pyi  plots.py  plots.pyi
src/tests/: proc_step_test.py
src/utils/: plotting.py
