[project]
name = "RhizoScan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "meegkit>=0.1.9",
    "mne>=1.10.2",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyqt5>=5.15.11",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
